--- a/HR_Analysis/LoadDataMimic.ipynb
+++ b/HR_Analysis/LoadDataMimic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -23,7 +23,7 @@
        "'3.6.5 |Anaconda, Inc.| (default, Apr 26 2018, 08:42:37) \\n[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)]'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.14.2'"
+       "'1.15.4'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "'0.22.0'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.0.0'"
+       "'1.1.0'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "'2.2.0'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "10282"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
        " ...]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        " 'p000107-2124-01-10-05-53']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "'p00/p000107/'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
        "'p000107-2121-11-30-20-03'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1335,16 +1335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<wfdb.io.record.Record at 0x112863550>"
+       "<wfdb.io.record.Record at 0x122a8d0b8>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,16 +1355,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<wfdb.io.record.Record at 0x1151d1898>"
+       "<wfdb.io.record.Record at 0x11d5f29b0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
        "tuple"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
        "4                  NaN     NaN            0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1915,161 +1915,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ROW_ID</th>\n",
-       "      <th>SUBJECT_ID</th>\n",
-       "      <th>HADM_ID</th>\n",
-       "      <th>ADMITTIME</th>\n",
-       "      <th>DISCHTIME</th>\n",
-       "      <th>DEATHTIME</th>\n",
-       "      <th>ADMISSION_TYPE</th>\n",
-       "      <th>ADMISSION_LOCATION</th>\n",
-       "      <th>DISCHARGE_LOCATION</th>\n",
-       "      <th>INSURANCE</th>\n",
-       "      <th>LANGUAGE</th>\n",
-       "      <th>RELIGION</th>\n",
-       "      <th>MARITAL_STATUS</th>\n",
-       "      <th>ETHNICITY</th>\n",
-       "      <th>EDREGTIME</th>\n",
-       "      <th>EDOUTTIME</th>\n",
-       "      <th>DIAGNOSIS</th>\n",
-       "      <th>HOSPITAL_EXPIRE_FLAG</th>\n",
-       "      <th>HAS_CHARTEVENTS_DATA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>112</td>\n",
-       "      <td>107</td>\n",
-       "      <td>191941</td>\n",
-       "      <td>2115-02-20 17:41:00</td>\n",
-       "      <td>2115-02-21 16:30:00</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>CLINIC REFERRAL/PREMATURE</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>ENGL</td>\n",
-       "      <td>CATHOLIC</td>\n",
-       "      <td>MARRIED</td>\n",
-       "      <td>HISPANIC OR LATINO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>AV FISTULA;ANGIOPLASTY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>113</td>\n",
-       "      <td>107</td>\n",
-       "      <td>182383</td>\n",
-       "      <td>2121-11-30 19:24:00</td>\n",
-       "      <td>2121-12-05 14:18:00</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>CLINIC REFERRAL/PREMATURE</td>\n",
-       "      <td>HOME HEALTH CARE</td>\n",
-       "      <td>Medicare</td>\n",
-       "      <td>ENGL</td>\n",
-       "      <td>CATHOLIC</td>\n",
-       "      <td>SEPARATED</td>\n",
-       "      <td>HISPANIC OR LATINO</td>\n",
-       "      <td>2121-11-30 16:40:00</td>\n",
-       "      <td>2121-11-30 19:57:00</td>\n",
-       "      <td>HYPERKALEMIA;CONGESTIVE HEART FAILURE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>114</td>\n",
-       "      <td>107</td>\n",
-       "      <td>174162</td>\n",
-       "      <td>2122-05-14 19:37:00</td>\n",
-       "      <td>2122-05-18 15:11:00</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>EMERGENCY</td>\n",
-       "      <td>CLINIC REFERRAL/PREMATURE</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>Medicare</td>\n",
-       "      <td>ENGL</td>\n",
-       "      <td>CATHOLIC</td>\n",
-       "      <td>SEPARATED</td>\n",
-       "      <td>HISPANIC OR LATINO</td>\n",
-       "      <td>2122-05-14 12:29:00</td>\n",
-       "      <td>2122-05-14 20:53:00</td>\n",
-       "      <td>UPPER GI BLEED</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     ROW_ID  SUBJECT_ID  HADM_ID           ADMITTIME           DISCHTIME  \\\n",
-       "114     112         107   191941 2115-02-20 17:41:00 2115-02-21 16:30:00   \n",
-       "115     113         107   182383 2121-11-30 19:24:00 2121-12-05 14:18:00   \n",
-       "116     114         107   174162 2122-05-14 19:37:00 2122-05-18 15:11:00   \n",
-       "\n",
-       "    DEATHTIME ADMISSION_TYPE         ADMISSION_LOCATION DISCHARGE_LOCATION  \\\n",
-       "114       NaT      EMERGENCY  CLINIC REFERRAL/PREMATURE               HOME   \n",
-       "115       NaT      EMERGENCY  CLINIC REFERRAL/PREMATURE   HOME HEALTH CARE   \n",
-       "116       NaT      EMERGENCY  CLINIC REFERRAL/PREMATURE               HOME   \n",
-       "\n",
-       "    INSURANCE LANGUAGE  RELIGION MARITAL_STATUS           ETHNICITY  \\\n",
-       "114   Private     ENGL  CATHOLIC        MARRIED  HISPANIC OR LATINO   \n",
-       "115  Medicare     ENGL  CATHOLIC      SEPARATED  HISPANIC OR LATINO   \n",
-       "116  Medicare     ENGL  CATHOLIC      SEPARATED  HISPANIC OR LATINO   \n",
-       "\n",
-       "               EDREGTIME            EDOUTTIME  \\\n",
-       "114                  NaN                  NaN   \n",
-       "115  2121-11-30 16:40:00  2121-11-30 19:57:00   \n",
-       "116  2122-05-14 12:29:00  2122-05-14 20:53:00   \n",
-       "\n",
-       "                                 DIAGNOSIS  HOSPITAL_EXPIRE_FLAG  \\\n",
-       "114                 AV FISTULA;ANGIOPLASTY                     0   \n",
-       "115  HYPERKALEMIA;CONGESTIVE HEART FAILURE                     0   \n",
-       "116                         UPPER GI BLEED                     0   \n",
-       "\n",
-       "     HAS_CHARTEVENTS_DATA  \n",
-       "114                     1  \n",
-       "115                     1  \n",
-       "116                     1  "
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#obtener admisiones del paciente\n",
+    "#Convertir a fechas\n",
     "admissions['ADMITTIME']=pd.to_datetime(admissions['ADMITTIME'])\n",
     "admissions['DISCHTIME']=pd.to_datetime(admissions['DISCHTIME'])\n",
     "admissions['DEATHTIME']=pd.to_datetime(admissions['DEATHTIME'])\n"
@@ -2077,24 +1927,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hacer match de las fechas\n",
+    "date = pd.to_datetime(files[1][8:])\n",
+    "patient = patients[patients.SUBJECT_ID == int(subject_id)]\n",
+    "admission = admissions[(admissions.SUBJECT_ID==int(subject_id)) & (admissions.ADMITTIME <= date) & (admissions.DISCHTIME >= date) ]\n",
+    "\n",
+    "out_time = admission.DEATHTIME\n",
+    "\n",
+    "if(pd.isna(out_time).all()):\n",
+    "    out_time = admission.DISCHTIME\n",
+    "diff_time=pd.Timedelta(days=1)\n",
+    "end_signal = out_time - diff_time\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "116    True\n",
-      "Name: DEATHTIME, dtype: bool\n"
+      "116   2122-05-14 19:37:00\n",
+      "Name: ADMITTIME, dtype: datetime64[ns]\n",
+      "['2122-05-18T15:11:00.000000000']\n",
+      "['2122-05-17T15:11:00.000000000']\n",
+      "['M']\n",
+      "2122-05-14 22:00:00\n"
      ]
     }
    ],
    "source": [
-    "#hacer match de las fechas\n",
-    "date = pd.to_datetime(files[1][8:])\n",
-    "admission = admissions[(admissions.SUBJECT_ID==int(subject_id)) & (admissions.ADMITTIME <= date) & (admissions.DISCHTIME >= date) ]\n",
-    "died = admission.DEATHTIME\n",
-    "print(pd.isna(died))"
+    "##Check\n",
+    "print(admission.ADMITTIME)\n",
+    "print(out_time.values)\n",
+    "print(end_signal.values)\n",
+    "print(patient.GENDER.values)\n",
+    "print(date)\n",
+    "print(record)"
    ]
   },
   {
@@ -2108,6 +1985,7 @@
     "list_hrs = []\n",
     "list_deathtime = []\n",
     "list_admission = []\n",
+    "date_time=pd.Timedelta(days=1)\n",
     "#for each subject\n",
     "for i, record in enumerate(record_list):\n",
     "    files = list(filter( lambda x : x.startswith('p') and not x.endswith('n'),wfdb.get_record_list('mimic3wdb/matched/'+record)))\n",
@@ -2119,10 +1997,11 @@
     "        died = admission.DEATHTIME\n",
     "        record_signal = wfdb.rdrecord(file, pb_dir='mimic3wdb/matched/'+record, channel_names=['II'])\n",
     "        #record_signal = np.nan_to_num(record_signal)\n",
-    "        peak_inds=processing.gqrs_detect(sig=np.nan_to_num(record_signal.p_signal[:,0]), fs=record_signal.fs)\n",
-    "        hrs = processing.compute_hr(sig_len=record_signal.p_signal.shape[0], qrs_inds=peak_inds, fs=record_signal.fs)\n",
-    "        list_hrs.append(hrs)\n",
-    "        list_admission.append(admission)"
+    "        if record_signal is not None:\n",
+    "            peak_inds=processing.gqrs_detect(sig=np.nan_to_num(record_signal.p_signal[:,0]), fs=record_signal.fs)\n",
+    "            hrs = processing.compute_hr(sig_len=record_signal.p_signal.shape[0], qrs_inds=peak_inds, fs=record_signal.fs)\n",
+    "            list_hrs.append(hrs)\n",
+    "            list_admission.append(admission)"
    ]
   },
   {
