--- a/HR_Analysis/LoadDataMimic.ipynb
+++ b/HR_Analysis/LoadDataMimic.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "'1.15.4'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "'0.22.0'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "'1.1.0'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "'2.2.0'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "10282"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "4                  NaN     NaN            0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -947,54 +947,159 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>ROW_ID</th>\n",
        "      <th>SUBJECT_ID</th>\n",
+       "      <th>HADM_ID</th>\n",
        "      <th>ADMITTIME</th>\n",
        "      <th>DISCHTIME</th>\n",
        "      <th>DEATHTIME</th>\n",
+       "      <th>ADMISSION_TYPE</th>\n",
+       "      <th>ADMISSION_LOCATION</th>\n",
+       "      <th>DISCHARGE_LOCATION</th>\n",
+       "      <th>INSURANCE</th>\n",
+       "      <th>LANGUAGE</th>\n",
+       "      <th>RELIGION</th>\n",
+       "      <th>MARITAL_STATUS</th>\n",
+       "      <th>ETHNICITY</th>\n",
+       "      <th>EDREGTIME</th>\n",
+       "      <th>EDOUTTIME</th>\n",
+       "      <th>DIAGNOSIS</th>\n",
+       "      <th>HOSPITAL_EXPIRE_FLAG</th>\n",
+       "      <th>HAS_CHARTEVENTS_DATA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>128</th>\n",
+       "      <td>167</td>\n",
        "      <td>124</td>\n",
+       "      <td>112906</td>\n",
        "      <td>2161-12-17 03:39:00</td>\n",
        "      <td>2161-12-24 15:35:00</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EMERGENCY</td>\n",
+       "      <td>EMERGENCY ROOM ADMIT</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>Medicare</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CATHOLIC</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>2161-12-16 18:57:00</td>\n",
+       "      <td>2161-12-17 12:35:00</td>\n",
+       "      <td>CHEST PAIN,R/O MI</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>129</th>\n",
+       "      <td>168</td>\n",
        "      <td>124</td>\n",
+       "      <td>134369</td>\n",
        "      <td>2165-05-21 21:02:00</td>\n",
        "      <td>2165-06-06 16:00:00</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ELECTIVE</td>\n",
+       "      <td>PHYS REFERRAL/NORMAL DELI</td>\n",
+       "      <td>REHAB/DISTINCT PART HOSP</td>\n",
+       "      <td>Medicare</td>\n",
+       "      <td>ENGL</td>\n",
+       "      <td>CATHOLIC</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CLAUDICATION</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>130</th>\n",
+       "      <td>169</td>\n",
        "      <td>124</td>\n",
+       "      <td>138376</td>\n",
        "      <td>2165-12-31 18:55:00</td>\n",
        "      <td>2166-02-01 06:55:00</td>\n",
        "      <td>2166-02-01 06:55:00</td>\n",
+       "      <td>EMERGENCY</td>\n",
+       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
+       "      <td>DEAD/EXPIRED</td>\n",
+       "      <td>Medicare</td>\n",
+       "      <td>ENGL</td>\n",
+       "      <td>CATHOLIC</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PNEUMONIA;CHRONIC OBST PULM DISEASE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>210</th>\n",
+       "      <td>166</td>\n",
        "      <td>124</td>\n",
+       "      <td>172461</td>\n",
        "      <td>2160-06-24 21:25:00</td>\n",
        "      <td>2160-07-15 15:10:00</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EMERGENCY</td>\n",
+       "      <td>TRANSFER FROM HOSP/EXTRAM</td>\n",
+       "      <td>HOME HEALTH CARE</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CATHOLIC</td>\n",
+       "      <td>MARRIED</td>\n",
+       "      <td>WHITE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CVA</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     SUBJECT_ID           ADMITTIME           DISCHTIME           DEATHTIME\n",
-       "128         124 2161-12-17 03:39:00 2161-12-24 15:35:00                 NaT\n",
-       "129         124 2165-05-21 21:02:00 2165-06-06 16:00:00                 NaT\n",
-       "130         124 2165-12-31 18:55:00 2166-02-01 06:55:00 2166-02-01 06:55:00\n",
-       "210         124 2160-06-24 21:25:00 2160-07-15 15:10:00                 NaT"
+       "     ROW_ID  SUBJECT_ID  HADM_ID            ADMITTIME            DISCHTIME  \\\n",
+       "128     167         124   112906  2161-12-17 03:39:00  2161-12-24 15:35:00   \n",
+       "129     168         124   134369  2165-05-21 21:02:00  2165-06-06 16:00:00   \n",
+       "130     169         124   138376  2165-12-31 18:55:00  2166-02-01 06:55:00   \n",
+       "210     166         124   172461  2160-06-24 21:25:00  2160-07-15 15:10:00   \n",
+       "\n",
+       "               DEATHTIME ADMISSION_TYPE         ADMISSION_LOCATION  \\\n",
+       "128                  NaN      EMERGENCY       EMERGENCY ROOM ADMIT   \n",
+       "129                  NaN       ELECTIVE  PHYS REFERRAL/NORMAL DELI   \n",
+       "130  2166-02-01 06:55:00      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
+       "210                  NaN      EMERGENCY  TRANSFER FROM HOSP/EXTRAM   \n",
+       "\n",
+       "           DISCHARGE_LOCATION INSURANCE LANGUAGE  RELIGION MARITAL_STATUS  \\\n",
+       "128                      HOME  Medicare      NaN  CATHOLIC        MARRIED   \n",
+       "129  REHAB/DISTINCT PART HOSP  Medicare     ENGL  CATHOLIC        MARRIED   \n",
+       "130              DEAD/EXPIRED  Medicare     ENGL  CATHOLIC        MARRIED   \n",
+       "210          HOME HEALTH CARE   Private      NaN  CATHOLIC        MARRIED   \n",
+       "\n",
+       "    ETHNICITY            EDREGTIME            EDOUTTIME  \\\n",
+       "128     WHITE  2161-12-16 18:57:00  2161-12-17 12:35:00   \n",
+       "129     WHITE                  NaN                  NaN   \n",
+       "130     WHITE                  NaN                  NaN   \n",
+       "210     WHITE                  NaN                  NaN   \n",
+       "\n",
+       "                               DIAGNOSIS  HOSPITAL_EXPIRE_FLAG  \\\n",
+       "128                    CHEST PAIN,R/O MI                     0   \n",
+       "129                         CLAUDICATION                     0   \n",
+       "130  PNEUMONIA;CHRONIC OBST PULM DISEASE                     1   \n",
+       "210                                  CVA                     0   \n",
+       "\n",
+       "     HAS_CHARTEVENTS_DATA  \n",
+       "128                     1  \n",
+       "129                     1  \n",
+       "130                     1  \n",
+       "210                     1  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1123,7 @@
        "Name: DEATHTIME, dtype: bool"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,15 +1134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16152\n",
-      "1440\n"
+      "58976\n",
+      "5854\n"
      ]
     }
    ],
@@ -1073,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1319,7 @@
        "4 2186-12-27 12:01:13  1.6202  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1475,7 @@
        "4 2166-08-12 22:02:00 2166-09-12 14:41:00       NaT  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1607,7 @@
        "6 2103-09-27 18:28:00 2103-09-28 15:44:00 2103-09-28 15:44:00  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1751,7 @@
        "6 -1 days +23:59:29  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1790,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#error data\n",
+    "all_data[all_data.TIME_TO_DEATH < '-2 days']\n",
+    "#delete if deathtime is before intime\n",
+    "all_data = all_data[(all_data.DEATHTIME>all_data.INTIME) | (all_data.DISCHTIME>all_data.INTIME)] #change filter deathtime or discharge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1721,6 +1838,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>5284</th>\n",
+       "      <td>4331</td>\n",
+       "      <td>265287</td>\n",
+       "      <td>2142-11-02 11:23:09</td>\n",
+       "      <td>2142-11-11 02:42:51</td>\n",
+       "      <td>2142-11-02 11:22:00</td>\n",
+       "      <td>2142-11-07 01:30:00</td>\n",
+       "      <td>2142-11-07 01:30:00</td>\n",
+       "      <td>-5 days +22:47:09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7451</th>\n",
        "      <td>6800</td>\n",
        "      <td>265008</td>\n",
@@ -1748,25 +1876,84 @@
       ],
       "text/plain": [
        "       SUBJECT_ID  ICUSTAY_ID              INTIME             OUTTIME  \\\n",
+       "5284         4331      265287 2142-11-02 11:23:09 2142-11-11 02:42:51   \n",
        "7451         6800      265008 2177-12-30 01:50:00 2178-01-01 19:41:00   \n",
        "10225       11347      263047 2164-03-09 10:59:59 2164-03-15 20:45:57   \n",
        "\n",
        "                ADMITTIME           DISCHTIME           DEATHTIME  \\\n",
+       "5284  2142-11-02 11:22:00 2142-11-07 01:30:00 2142-11-07 01:30:00   \n",
        "7451  2177-12-29 21:33:00 2178-01-01 19:41:00 2177-12-01 19:41:00   \n",
        "10225 2164-03-09 10:56:00 2164-03-15 15:30:00 2164-03-08 15:30:00   \n",
        "\n",
        "           TIME_TO_DEATH  \n",
+       "5284   -5 days +22:47:09  \n",
        "7451  -31 days +00:00:00  \n",
        "10225  -8 days +18:44:03  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_data[all_data.TIME_TO_DEATH < '-5 days']"
+    "#Weird data\n",
+    "all_data[all_data.TIME_TO_DEATH < '-3 days']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 days 11:25:16.159566\n",
+      "108 days 14:48:07\n",
+      "0 days 00:00:12\n",
+      "17159\n",
+      "1677\n"
+     ]
+    }
+   ],
+   "source": [
+    "#mean duration of signal\n",
+    "all_data['SIGNAL_DURATION'] = all_data.OUTTIME - all_data.INTIME\n",
+    "print(np.mean(all_data['SIGNAL_DURATION']))\n",
+    "print(np.max(all_data['SIGNAL_DURATION']))\n",
+    "print(np.min(all_data['SIGNAL_DURATION']))\n",
+    "\n",
+    "print(len(all_data))\n",
+    "print(len(all_data[all_data.DEATHTIME.isna()==False])) # how many died"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 days 11:54:50.801861\n",
+      "108 days 14:48:07\n",
+      "0 days 05:07:00\n",
+      "17079\n",
+      "1664\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_data = all_data[all_data.SIGNAL_DURATION > pd.Timedelta('5hour')]\n",
+    "print(np.mean(all_data['SIGNAL_DURATION']))\n",
+    "print(np.max(all_data['SIGNAL_DURATION']))\n",
+    "print(np.min(all_data['SIGNAL_DURATION']))\n",
+    "\n",
+    "print(len(all_data))\n",
+    "print(len(all_data[all_data.DEATHTIME.isna()==False])) # how many died"
    ]
   },
   {
