--- a/HR_Analysis/LoadDataMimic.ipynb
+++ b/HR_Analysis/LoadDataMimic.ipynb
@@ -2723,7 +2723,7 @@
     "not_died = df[pd.na(df.DEATHTIME)]\n",
     "population_size = len(not_died)\n",
     "sample_size= 100 #TODO make multiple of how many died\n",
-    "not_died_keep_idx = sample_without_replacement(population_size, )\n",
+    "not_died_keep_idx = sample_without_replacement(population_size, sample_size)\n",
     "\n",
     "not_died = not_died[not_died_keep_idx]"
    ]
