Selected files to download, download script

--- a/HR_Analysis/Filter tests.ipynb
+++ b/HR_Analysis/Filter tests.ipynb
@@ -164,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11ee6c400>]"
+       "[<matplotlib.lines.Line2D at 0x11ffdf1d0>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -198,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11f3ef240>]"
+       "[<matplotlib.lines.Line2D at 0x120046240>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -426,7 +426,9 @@
     "Q = Q[:, 0].astype(int)\n",
     "S = S[:, 0].astype(int)\n",
     "T = T[:, 0].astype(int)\n",
-    "plot_detection_data(filtered_ecg_3, R, Q, S, T, xqrs.qrs_inds)"
+    "plot_detection_data(filtered_ecg_3, R, Q, S, T, xqrs.qrs_inds)\n",
+    "\n",
+    "\n"
    ]
   },
   {
